--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -6,11 +6,13 @@
     padding-right: 16px;
     max-width: 100%;
     margin: 0 auto;
+    overflow-x: hidden;
   }
   .heroCard {
     grid-template-columns: 1fr;
     margin: 0 auto;
     max-width: 100%;
+    width: 100%;
   }
   .heroCardContent {
     display: contents;
